# MatrixMania_02

./: README.md  pyproject.toml  requirements.txt
matrixmania_original/: __init__.py  compute.py
