[project]
name = "matrixmania_original_szilagyial100533"
version = "0.1.0"
description = "MatrixMania: Simple linear algebra functions for teaching (matmul, transpose, rot_2D, rot_3D, project_ortho)."
authors = [
{ name="Alexandru Andrei Szilagyi", email="szialgyial100533@th-nuernberg.de" }]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["tabulate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["matrixmania"]